--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 包含 bootstrap 样式表 -->
     <link rel="stylesheet" href="https://apps.bdimg.com/libs/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link href="jQueryAssets/jquery.ui.core.min.css" rel="stylesheet" type="text/css">
+    <link href="jQueryAssets/jquery.ui.theme.min.css" rel="stylesheet" type="text/css">
+    <link href="jQueryAssets/jquery.ui.button.min.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="style.css">
+<script src="jQueryAssets/jquery-1.11.1.min.js"></script>
+<script src="jQueryAssets/jquery.ui-1.10.4.button.min.js"></script>
 </head>
 
 <body>
     <div class="container">
-        <h2>表格</h2>
-        <p>创建响应式表格 (将在小于768px的小型设备下水平滚动)。另外：添加交替单元格的背景色：</p>
+      <h2>表格h</h2>
+	  <button id="Button1" class="ui-button ui-widget ui-corner-all">Button</button>
+<p>创建响应式表格 (将在小于768px的小型设备下水平滚动)。另外：添加交替单元格的背景色：</p>
         <div class="table-responsive">
             <table class="table table-striped table-bordered">
                 <thead>
@@ -47,6 +54,7 @@
         <p>创建响应式图片(将扩展到父元素)。 另外：图片以椭圆型展示：</p>
         <img src="https://www.runoob.com/try/demo_source/cinqueterre.jpg" class="img-responsive img-circle" alt="Cinque Terre" width="304" height="236">
 
+       
         <h2>图标</h2>
         <p>插入图标:</p>
         <p>云图标: <span class="glyphicon glyphicon-cloud"></span></p>
@@ -61,6 +69,14 @@
     <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
     <!-- 可选: 合并了 Bootstrap JavaScript 插件 -->
     <script src="https://apps.bdimg.com/libs/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+$(function() {
+	$( "#Button1" ).button(); 
+});
+    </script>
+	 <div class="loading">
+			<span>loading</span>
+		</div>
 </body>
 
 </html>
