--- a/index.html
+++ b/index.html
@@ -3,80 +3,79 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Bootstrap 实例</title>
+    <title>MyPage</title>
     <!-- 包含头部信息用于适应不同设备 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 包含 bootstrap 样式表 -->
     <link rel="stylesheet" href="https://apps.bdimg.com/libs/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link href="jQueryAssets/jquery.ui.core.min.css" rel="stylesheet" type="text/css">
-    <link href="jQueryAssets/jquery.ui.theme.min.css" rel="stylesheet" type="text/css">
-    <link href="jQueryAssets/jquery.ui.button.min.css" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="style.css">
-<script src="jQueryAssets/jquery-1.11.1.min.js"></script>
-<script src="jQueryAssets/jquery.ui-1.10.4.button.min.js"></script>
+	<style>
+		body {
+				margin: 0;
+				padding: 0;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				min-height: 100vh;
+				background: #060c21;
+				font-family: 'Poppins', sans-serif;
+			}
+			.box {
+				position: relative;
+				width: 300px;
+				height: 400px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				background: #060c21;
+			}
+			/* 用box的伪元素添加一个面积比box略大的矩形,并通过改变层叠次序,置于box的下层,达到给box设置边框的效果 */
+			.box::before {
+				content: '';
+				position: absolute;
+				top: -2px;
+				left: -2px;
+				right: -2px;
+				bottom: -2px;
+				background: #fff;
+				z-index: -1;
+			}
+			/* 于上面类似,做一个面积比box略大的矩形,并通过改变层叠次序,置于box的下层,达到给box设置边框的效果 */
+			.box::after {
+				content: '';
+				position: absolute;
+				top: -2px;
+				left: -2px;
+				right: -2px;
+				bottom: -2px;
+				background: #fff;
+				z-index: -2;
+				/* 滤镜属性  给图像设置高斯模糊。"radius"一值设定高斯函数的标准差，或者是屏幕上以多少像素融在一起，所以值越大越模糊；如果没有设定值，则默认是0；这个参数可设置css长度值，但不接受百分比值。 */
+				filter: blur(40px);
+			}
+			.box::before,
+			.box::after {
+				/* linear-gradient() 函数用于创建一个线性渐变的 "图像"。 参数1:用角度值指定渐变的方向（或角度）  12点钟方向为0deg*/
+				background: linear-gradient(235deg, #89ff00, #060c21, #00bcd4);
+			}
+			.content {
+				padding: 20px;
+				box-sizing: border-box;
+				color: #fff;
+			}
+	</style>
 </head>
 
 <body>
-    <div class="container">
-      <h2>表格h</h2>
-	  <button id="Button1" class="ui-button ui-widget ui-corner-all">Button</button>
-<p>创建响应式表格 (将在小于768px的小型设备下水平滚动)。另外：添加交替单元格的背景色：</p>
-        <div class="table-responsive">
-            <table class="table table-striped table-bordered">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Name</th>
-                        <th>Street</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Anna Awesome</td>
-                        <td>Broome Street</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Debbie Dallas</td>
-                        <td>Houston Street</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>John Doe</td>
-                        <td>Madison Street</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-
-        <h2>图像</h2>
-        <p>创建响应式图片(将扩展到父元素)。 另外：图片以椭圆型展示：</p>
-        <img src="https://www.runoob.com/try/demo_source/cinqueterre.jpg" class="img-responsive img-circle" alt="Cinque Terre" width="304" height="236">
-
-       
-        <h2>图标</h2>
-        <p>插入图标:</p>
-        <p>云图标: <span class="glyphicon glyphicon-cloud"></span></p>
-        <p>信件图标: <span class="glyphicon glyphicon-envelope"></span></p>
-        <p>搜索图标: <span class="glyphicon glyphicon-search"></span></p>
-        <p>打印图标: <span class="glyphicon glyphicon-print"></span></p>
-        <p>下载图标：<span class="glyphicon glyphicon-download"></span></p>
-    </div>
-
-    <!-- JavaScript 放置在文档最后面可以使页面加载速度更快 -->
-    <!-- 可选: 包含 jQuery 库 -->
-    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-    <!-- 可选: 合并了 Bootstrap JavaScript 插件 -->
-    <script src="https://apps.bdimg.com/libs/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-<script type="text/javascript">
-$(function() {
-	$( "#Button1" ).button(); 
-});
-    </script>
-	 <div class="loading">
-			<span>loading</span>
-		</div>
+	<div class="box">
+			<div class="content">
+				<h4 style="text-align: center;font-family:楷体">《行香子·过七里濑》</h1>
+				<p style="text-align: center;font-family:楷体">苏轼</p>
+				<p style="text-indent: 2em; font-family:楷体">
+					一叶舟轻，双桨鸿惊。水天清、影湛波平。鱼翻藻鉴，鹭点烟汀。过沙溪急，霜溪冷，月溪明。	
+					重重似画，曲曲如屏。算当年、虚老严陵。君臣一梦，今古空名。但远山长，云山乱，晓山青。
+				</p>
+			</div>
+		</div>    
 </body>
 
 </html>
